/***********************************************************************
 X3 ChangeLog

2006-12-08  Alex Schumann   <rubin@afternet.org>

	* src/opserv.c: Moving some version reply housekeeping to proto-p10.c

	* src/proto-p10.c: moving version reply storage here, adding webTV
	no_notice support (automatiaclly dont send notices if version reply
	says its a webtv user since they cant SEE notices. (other clients to
	add?))  note, this needs a version query alert to get the version from
	them.

	* src/helpfile.c: honor the no_notices user bit

	* src/hash.h: add no_notices user bit

2006-12-07  Alex Schumann   <rubin@afternet.org>

	* src/opserv.c: Add filter ability to stats alerts + fixup

	* src/opserv.help: document filter feature of stats alerts + fixup

2006-12-02  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: fix to levels command (- were missing)

	* src/tools.c: fix warning

	* src/common.h: fix warning

	* src/chanserv.help: update online help url, changed help general to
	use new $! command char replacement code.

	* src/hash.c: fix warning when geoip is off

	* src/helpfile.c: add new '$!' code for chanserv's current trigger
	char in help files

2006-12-01  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: Raisk pointed out that mdelop and friends dont work
	on users of non-standard access level such as 201. Fixed this by
	changing mdelop and friends to work on the range of access levels.
	Added a LEVELS command.

	* src/chanserv.h: corrected PEON access defines such that 1-150 is
	peon instead of 100-150 with 1-99 being undefined.

	* src/chanserv.help: help for new LEVELS command

	* src/helpfile.c: Improved table functions so that it automatically
	right-justifies numerical columns.

	* src/tools.c: Added helper functions str_is_number and msnprintf (an
	auto-mallocing printf function)

	* src/common.h: defines and defines for msnprintf and str_is_number


2006-11-30  Alex Schumann   <rubin@afternet.org>
